src/Language/Hawk/Parse/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------

state 7 contains 1 shift/reduce conflicts.
state 80 contains 1 shift/reduce conflicts.
state 117 contains 18 shift/reduce conflicts.
state 180 contains 2 shift/reduce conflicts.
state 186 contains 1 shift/reduce conflicts.
state 217 contains 20 shift/reduce conflicts.
state 240 contains 20 shift/reduce conflicts.
state 242 contains 17 shift/reduce conflicts.
state 273 contains 20 shift/reduce conflicts.
state 274 contains 20 shift/reduce conflicts.
state 275 contains 20 shift/reduce conflicts.
state 368 contains 1 shift/reduce conflicts.
state 379 contains 1 shift/reduce conflicts.

rule 61 is unused
rule 133 is unused
rule 134 is unused
rule 135 is unused
rule 194 is unused

terminal WHILE is unused
terminal FOR is unused
terminal IN is unused
terminal '<-' is unused
terminal ':>' is unused
terminal OPEN_BLOCK is unused
terminal CLOSE_BLOCK is unused
terminal OPEN_STMT is unused
terminal CLOSE_STMT is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseHk -> trans_unit                       (0)
	trans_unit -> root_mod                             (1)
	root_mod -> MOD mod_path ext_stmts                 (2)
	modid -> ID_CAP_USCORE                             (3)
	mod_path -> dotted_modid                           (4)
	dotted_modid -> modid                              (5)
	dotted_modid -> dotted_modid '.' modid             (6)
	varid -> ID_LOWER                                  (7)
	varid -> ID_USCORE_NUM_TICK                        (8)
	qvarid -> varid                                    (9)
	qvarid -> mod_path '.' varid                       (10)
	conid -> ID_CAP_USCORE                             (11)
	conid -> ID_CAP_USCORE_NUM_TICK                    (12)
	qconid -> conid                                    (13)
	qconid -> mod_path '.' conid                       (14)
	import_target_id -> ID_CAP_USCORE                  (15)
	import_target_id -> ID_CAP_USCORE_NUM_TICK         (16)
	import_target_id -> ID_USCORE_NUM_TICK             (17)
	import_target_id -> ID_LOWER                       (18)
	tyvarid -> ID_LOWER                                (19)
	tyvarids -> tyvarid                                (20)
	tyvarids -> tyvarids tyvarid                       (21)
	tyvarids0 -> tyvarids                              (22)
	tyvarids0 ->                                       (23)
	ext_block -> '{' '}'                               (24)
	ext_block -> '{' ext_stmts '}'                     (25)
	ext_stmts -> ext_stmt                              (26)
	ext_stmts -> ext_stmts ext_stmt                    (27)
	ext_stmt -> mod_dec                                (28)
	ext_stmt -> import_dec                             (29)
	ext_stmt -> ext_fn_stmt                            (30)
	vis_tag -> PUB                                     (31)
	vis_tag -> PRIV                                    (32)
	vis_tag0 -> vis_tag                                (33)
	vis_tag0 ->                                        (34)
	ext_fn_stmt -> vis_tag0 LINK fn_dec                (35)
	ext_fn_stmt -> vis_tag0 fn_dec                     (36)
	ext_fn_stmt -> vis_tag0 fn_def                     (37)
	ext_fn_stmt -> vis_tag0 val_def                    (38)
	ext_fn_stmt -> vis_tag0 var_dec                    (39)
	ext_fn_stmt -> vis_tag0 var_def                    (40)
	ext_fn_stmt -> vis_tag0 type_def                   (41)
	mod_dec -> MOD mod_path ':' ext_block              (42)
	mod_dec -> vis_tag MOD mod_path ':' ext_block      (43)
	import_dec -> USE import_path                      (44)
	import_dec -> USE_QUAL import_path                 (45)
	import_dec -> vis_tag USE import_path              (46)
	import_dec -> vis_tag USE_QUAL import_path         (47)
	import_path -> modid '.' import_path               (48)
	import_path -> import_target import_alias0         (49)
	import_target -> import_target_id                  (50)
	import_target -> '(' import_paths ')'              (51)
	import_paths -> import_path                        (52)
	import_paths -> import_paths ',' import_path       (53)
	import_alias0 -> import_alias                      (54)
	import_alias0 ->                                   (55)
	import_alias -> AS modid                           (56)
	fn_dec -> FN varid '::' ctype                      (57)
	fn_def -> fn_dec bindings                          (58)
	obj_dec -> varid '::' type                         (59)
	obj_def -> obj_dec '=' '{' exp '}'                 (60)
	val_dec -> VAL obj_dec                             (61)
	val_def -> VAL obj_def                             (62)
	var_dec -> VAR obj_dec                             (63)
	var_def -> VAR obj_def                             (64)
	type_def -> alias_def                              (65)
	type_def -> rec_def                                (66)
	type_def -> union_def                              (67)
	type_def -> class_def                              (68)
	type_def -> inst_def                               (69)
	alias_def -> TYPE conid tyvarids0 rcontext0 '=' type   (70)
	rec_def -> DATA conid tyvarids0 rsupertys0 rcontext0 rec_member_block   (71)
	rec_member_block -> '=' rec_members                (72)
	rec_member_block ->                                (73)
	rec_members -> rec_member                          (74)
	rec_members -> rec_members ',' rec_member          (75)
	rec_member -> vis_tag0 val_def                     (76)
	rec_member -> vis_tag0 var_dec                     (77)
	rec_member -> vis_tag0 var_def                     (78)
	union_def -> ENUM conid tyvarids0 rcontext0 union_block   (79)
	union_block -> '=' union_elems                     (80)
	union_elems -> union_elem                          (81)
	union_elems -> union_elems '|' union_elem          (82)
	union_elem -> conid                                (83)
	union_elem -> conid union_elem_types               (84)
	union_elem_types -> union_elem_type                (85)
	union_elem_types -> union_elem_types union_elem_type   (86)
	union_elem_type -> atype                           (87)
	class_def -> CLASS conid tyvarids rcontext0 class_body   (88)
	class_body -> ':' '{' class_members '}'            (89)
	class_members -> class_member                      (90)
	class_members -> class_members class_member        (91)
	class_member -> vis_tag0 fn_dec                    (92)
	class_member -> vis_tag0 fn_def                    (93)
	inst_def -> INST conid atypes rcontext0 inst_body   (94)
	inst_body -> ':' '{' inst_members '}'              (95)
	inst_members -> inst_member                        (96)
	inst_members -> inst_members inst_member           (97)
	inst_member -> vis_tag0 fn_def                     (98)
	ctype -> lcontext0 type                            (99)
	type -> btype '->' type                            (100)
	type -> btype                                      (101)
	btype -> btype atype                               (102)
	btype -> atype                                     (103)
	atype -> typrim                                    (104)
	atype -> tycon                                     (105)
	atype -> tyvar                                     (106)
	atype -> tyconst                                   (107)
	atype -> tyref                                     (108)
	atype -> tyarray                                   (109)
	atype -> tytuple                                   (110)
	atype -> tygroup                                   (111)
	typrim -> prim_type                                (112)
	tycon -> qconid                                    (113)
	tyvar -> tyvarid                                   (114)
	tyconst -> '#' atype                               (115)
	tyref -> '*' atype                                 (116)
	tyarray -> '[' type ']'                            (117)
	tytuple -> '(' types ')'                           (118)
	tygroup -> '(' type ')'                            (119)
	types -> type ',' type                             (120)
	types -> types ',' type                            (121)
	rcontext0 -> rcontext                              (122)
	rcontext0 ->                                       (123)
	rcontext -> '<=' context                           (124)
	lcontext0 -> lcontext                              (125)
	lcontext0 ->                                       (126)
	lcontext -> context '=>'                           (127)
	context -> class_asst                              (128)
	context -> context ',' class_asst                  (129)
	class_asst -> qconid atypes                        (130)
	atypes -> atype                                    (131)
	atypes -> atypes atype                             (132)
	lsupertys0 -> lsupertys                            (133)
	lsupertys0 ->                                      (134)
	lsupertys -> rsupertys ':>'                        (135)
	rsupertys0 -> rsupertys                            (136)
	rsupertys0 ->                                      (137)
	rsupertys -> '<:' supertys                         (138)
	supertys -> superty                                (139)
	supertys -> supertys ',' superty                   (140)
	superty -> type                                    (141)
	prim_type -> '()'                                  (142)
	prim_type -> BOOL_TY                               (143)
	prim_type -> W8_TY                                 (144)
	prim_type -> W16_TY                                (145)
	prim_type -> W32_TY                                (146)
	prim_type -> W64_TY                                (147)
	prim_type -> I8_TY                                 (148)
	prim_type -> I16_TY                                (149)
	prim_type -> I32_TY                                (150)
	prim_type -> I64_TY                                (151)
	prim_type -> F32_TY                                (152)
	prim_type -> F64_TY                                (153)
	prim_type -> CHAR_TY                               (154)
	prim_type -> STRING_TY                             (155)
	bindings -> binding                                (156)
	bindings -> bindings binding                       (157)
	binding -> '|' patterns binding_block              (158)
	binding -> binding_block                           (159)
	binding_block -> ':' block                         (160)
	binding_block -> '=' '{' exp '}'                   (161)
	binding_block -> guarded_binding_blocks            (162)
	guarded_binding_blocks -> guarded_binding_block    (163)
	guarded_binding_blocks -> guarded_binding_blocks guarded_binding_block   (164)
	guarded_binding_block -> guard ':' block           (165)
	guarded_binding_block -> guard '=' '{' exp '}'     (166)
	guard -> '*' exp                                   (167)
	guard -> '*' '_'                                   (168)
	patterns -> pattern                                (169)
	patterns -> patterns pattern                       (170)
	pattern -> varid                                   (171)
	pattern -> const_obj                               (172)
	pattern -> qconid                                  (173)
	pattern -> '(' qconid patterns ')'                 (174)
	pattern -> '(' pattern_tuple ')'                   (175)
	pattern -> varid '@' pattern                       (176)
	pattern -> '_'                                     (177)
	pattern_tuple -> pattern                           (178)
	pattern_tuple -> pattern_tuple ',' pattern         (179)
	block -> '{' block_stmts '}'                       (180)
	block_stmts -> '{' block_stmt '}'                  (181)
	block_stmts -> block_stmts '{' block_stmt '}'      (182)
	block_stmt -> DO ':' block                         (183)
	block_stmt -> exp                                  (184)
	block_stmt -> val_def                              (185)
	block_stmt -> var_dec                              (186)
	block_stmt -> var_def                              (187)
	block_stmt -> RETURN exp                           (188)
	block_stmt -> if_stmt                              (189)
	block_stmt ->                                      (190)
	if_stmt -> IF exp ':' block else_stmt0             (191)
	else_stmt0 -> '}' '{' ELIF exp ':' block else_stmt0   (192)
	else_stmt0 -> '}' '{' ELSE ':' block               (193)
	else_stmt0 ->                                      (194)
	exp -> const_exp                                   (195)
	exp -> assign_exp                                  (196)
	exp -> unary_op_exp                                (197)
	exp -> bin_op_exp                                  (198)
	exp -> '(' exp ')'                                 (199)
	exp -> qvarid exps0                                (200)
	exps0 -> exps                                      (201)
	exps0 ->                                           (202)
	exps -> exp                                        (203)
	exps -> exps exp                                   (204)
	const_exp -> const_obj                             (205)
	assign_exp -> qvarid assign_op exp                 (206)
	unary_op_exp -> prefix_op exp                      (207)
	unary_op_exp -> exp postfix_op                     (208)
	bin_op_exp -> exp bin_op exp                       (209)
	assign_op -> '='                                   (210)
	assign_op -> '*='                                  (211)
	assign_op -> '/='                                  (212)
	assign_op -> '%='                                  (213)
	assign_op -> '+='                                  (214)
	assign_op -> '-='                                  (215)
	assign_op -> '<<='                                 (216)
	assign_op -> '>>='                                 (217)
	assign_op -> '&='                                  (218)
	assign_op -> '^='                                  (219)
	assign_op -> '|='                                  (220)
	bin_op -> '*'                                      (221)
	bin_op -> '/'                                      (222)
	bin_op -> '%'                                      (223)
	bin_op -> '+'                                      (224)
	bin_op -> '-'                                      (225)
	bin_op -> '<<'                                     (226)
	bin_op -> '>>'                                     (227)
	bin_op -> '<'                                      (228)
	bin_op -> '>'                                      (229)
	bin_op -> '<='                                     (230)
	bin_op -> '>='                                     (231)
	bin_op -> '=='                                     (232)
	bin_op -> '!='                                     (233)
	bin_op -> '&'                                      (234)
	bin_op -> '^'                                      (235)
	bin_op -> '|'                                      (236)
	bin_op -> '&&'                                     (237)
	bin_op -> '||'                                     (238)
	prefix_op -> '++'                                  (239)
	prefix_op -> '--'                                  (240)
	prefix_op -> '&'                                   (241)
	prefix_op -> '*'                                   (242)
	prefix_op -> '+'                                   (243)
	prefix_op -> '-'                                   (244)
	prefix_op -> '~'                                   (245)
	prefix_op -> '!'                                   (246)
	postfix_op -> '++'                                 (247)
	postfix_op -> '--'                                 (248)
	const_obj -> '()'                                  (249)
	const_obj -> INTEGER                               (250)
	const_obj -> DOUBLE                                (251)
	const_obj -> CHAR                                  (252)
	const_obj -> STRING                                (253)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	MOD            { Token _ TokenModule }
	USE            { Token _ TokenUse }
	USE_QUAL       { Token _ TokenUseQualified }
	AS             { Token _ TokenAs }
	PUB            { Token _ TokenPublic }
	PRIV           { Token _ TokenPrivate }
	LINK           { Token _ TokenLink }
	DATA           { Token _ TokenData }
	ENUM           { Token _ TokenEnum }
	TYPE           { Token _ TokenType }
	CLASS          { Token _ TokenClass }
	INST           { Token _ TokenInst }
	FN             { Token _ TokenFunction }
	VAL            { Token _ TokenValue }
	VAR            { Token _ TokenVariable }
	DO             { Token _ TokenDo }
	RETURN         { Token _ TokenReturn }
	IF             { Token _ TokenIf }
	ELSE           { Token _ TokenElse }
	ELIF           { Token _ TokenElif }
	WHILE          { Token _ TokenWhile }
	FOR            { Token _ TokenFor }
	IN             { Token _ TokenIn }
	'()'           { Token _ TokenParenPair }
	BOOL_TY        { Token _ TokenBoolTy }
	W8_TY          { Token _ TokenW8Ty }
	W16_TY         { Token _ TokenW16Ty }
	W32_TY         { Token _ TokenW32Ty }
	W64_TY         { Token _ TokenW64Ty }
	I8_TY          { Token _ TokenI8Ty }
	I16_TY         { Token _ TokenI16Ty }
	I32_TY         { Token _ TokenI32Ty }
	I64_TY         { Token _ TokenI64Ty }
	F32_TY         { Token _ TokenF32Ty }
	F64_TY         { Token _ TokenF64Ty }
	CHAR_TY        { Token _ TokenCharTy }
	STRING_TY      { Token _ TokenStringTy }
	'@'            { Token _ TokenAtSign }
	'#'            { Token _ TokenPound }
	':'            { Token _ TokenColon }
	'::'           { Token _ TokenDblColon }
	'_'            { Token _ TokenUnderscore }
	'<-'           { Token _ TokenLArrow }
	'->'           { Token _ TokenRArrow }
	'<='           { Token _ TokenThickLArrow }
	'=>'           { Token _ TokenThickRArrow }
	'<:'           { Token _ TokenLSubArrow }
	':>'           { Token _ TokenRSubArrow }
	'('            { Token _ TokenLParen }
	')'            { Token _ TokenRParen }
	'['            { Token _ TokenLBracket }
	']'            { Token _ TokenRBracket }
	'{'            { Token _ TokenLCurlyBrace }
	'}'            { Token _ TokenRCurlyBrace }
	'.'            { Token _ TokenPeriod }
	','            { Token _ TokenComma }
	'='            { Token _ TokenEquals }
	'*='           { Token _ TokenStarEquals }
	'/='           { Token _ TokenSlashEquals }
	'%='           { Token _ TokenPercentEquals }
	'+='           { Token _ TokenPlusEquals }
	'-='           { Token _ TokenMinusEquals }
	'<<='          { Token _ TokenShlEq }
	'>>='          { Token _ TokenShrEq }
	'&='           { Token _ TokenAmpersandEquals }
	'|='           { Token _ TokenBarEquals }
	'^='           { Token _ TokenCaretEquals }
	'*'            { Token _ TokenStar }
	'/'            { Token _ TokenSlash }
	'%'            { Token _ TokenPercent }
	'+'            { Token _ TokenPlus }
	'-'            { Token _ TokenMinus }
	'<<'           { Token _ TokenShl }
	'>>'           { Token _ TokenShr }
	'<'            { Token _ TokenLesser }
	'>'            { Token _ TokenGreater }
	'>='           { Token _ TokenGreaterEquals }
	'=='           { Token _ TokenDblEquals }
	'!='           { Token _ TokenExclaimEquals }
	'&'            { Token _ TokenAmpersand }
	'^'            { Token _ TokenCaret }
	'|'            { Token _ TokenBar }
	'&&'           { Token _ TokenAmpAmp }
	'||'           { Token _ TokenBarBar }
	'++'           { Token _ TokenDblPlus }
	'--'           { Token _ TokenDblMinus }
	'~'            { Token _ TokenTilde }
	'!'            { Token _ TokenExclaim }
	ID_LOWER       { Token _ (TokenIdLower _) }
	ID_CAP_USCORE  { Token _ (TokenIdCapUscore _) }
	ID_USCORE_NUM_TICK{ Token _ (TokenIdUScoreNumTick _) }
	ID_CAP_USCORE_NUM_TICK{ Token _ (TokenIdCapUScoreNumTick _) }
	INTEGER        { Token _ (TokenInteger _) }
	DOUBLE         { Token _ (TokenDouble _) }
	CHAR           { Token _ (TokenChar _) }
	STRING         { Token _ (TokenString _) }
	OPEN_BLOCK     { Token _ TokenOpenBlock }
	CLOSE_BLOCK    { Token _ TokenCloseBlock }
	OPEN_STMT      { Token _ TokenOpenStmt }
	CLOSE_STMT     { Token _ TokenCloseStmt }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseHk  rule  0
	trans_unit      rule  1
	root_mod        rule  2
	modid           rule  3
	mod_path        rule  4
	dotted_modid    rules 5, 6
	varid           rules 7, 8
	qvarid          rules 9, 10
	conid           rules 11, 12
	qconid          rules 13, 14
	import_target_id rules 15, 16, 17, 18
	tyvarid         rule  19
	tyvarids        rules 20, 21
	tyvarids0       rules 22, 23
	ext_block       rules 24, 25
	ext_stmts       rules 26, 27
	ext_stmt        rules 28, 29, 30
	vis_tag         rules 31, 32
	vis_tag0        rules 33, 34
	ext_fn_stmt     rules 35, 36, 37, 38, 39, 40, 41
	mod_dec         rules 42, 43
	import_dec      rules 44, 45, 46, 47
	import_path     rules 48, 49
	import_target   rules 50, 51
	import_paths    rules 52, 53
	import_alias0   rules 54, 55
	import_alias    rule  56
	fn_dec          rule  57
	fn_def          rule  58
	obj_dec         rule  59
	obj_def         rule  60
	val_dec         rule  61
	val_def         rule  62
	var_dec         rule  63
	var_def         rule  64
	type_def        rules 65, 66, 67, 68, 69
	alias_def       rule  70
	rec_def         rule  71
	rec_member_block rules 72, 73
	rec_members     rules 74, 75
	rec_member      rules 76, 77, 78
	union_def       rule  79
	union_block     rule  80
	union_elems     rules 81, 82
	union_elem      rules 83, 84
	union_elem_types rules 85, 86
	union_elem_type rule  87
	class_def       rule  88
	class_body      rule  89
	class_members   rules 90, 91
	class_member    rules 92, 93
	inst_def        rule  94
	inst_body       rule  95
	inst_members    rules 96, 97
	inst_member     rule  98
	ctype           rule  99
	type            rules 100, 101
	btype           rules 102, 103
	atype           rules 104, 105, 106, 107, 108, 109, 110, 111
	typrim          rule  112
	tycon           rule  113
	tyvar           rule  114
	tyconst         rule  115
	tyref           rule  116
	tyarray         rule  117
	tytuple         rule  118
	tygroup         rule  119
	types           rules 120, 121
	rcontext0       rules 122, 123
	rcontext        rule  124
	lcontext0       rules 125, 126
	lcontext        rule  127
	context         rules 128, 129
	class_asst      rule  130
	atypes          rules 131, 132
	lsupertys0      rules 133, 134
	lsupertys       rule  135
	rsupertys0      rules 136, 137
	rsupertys       rule  138
	supertys        rules 139, 140
	superty         rule  141
	prim_type       rules 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155
	bindings        rules 156, 157
	binding         rules 158, 159
	binding_block   rules 160, 161, 162
	guarded_binding_blocks rules 163, 164
	guarded_binding_block rules 165, 166
	guard           rules 167, 168
	patterns        rules 169, 170
	pattern         rules 171, 172, 173, 174, 175, 176, 177
	pattern_tuple   rules 178, 179
	block           rule  180
	block_stmts     rules 181, 182
	block_stmt      rules 183, 184, 185, 186, 187, 188, 189, 190
	if_stmt         rule  191
	else_stmt0      rules 192, 193, 194
	exp             rules 195, 196, 197, 198, 199, 200
	exps0           rules 201, 202
	exps            rules 203, 204
	const_exp       rule  205
	assign_exp      rule  206
	unary_op_exp    rules 207, 208
	bin_op_exp      rule  209
	assign_op       rules 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220
	bin_op          rules 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238
	prefix_op       rules 239, 240, 241, 242, 243, 244, 245, 246
	postfix_op      rules 247, 248
	const_obj       rules 249, 250, 251, 252, 253

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	MOD            shift, and enter state 3

	trans_unit     goto state 4
	root_mod       goto state 2

State 1


	MOD            shift, and enter state 3

	root_mod       goto state 2

State 2

	trans_unit -> root_mod .                            (rule 1)

	%eof           reduce using rule 1


State 3

	root_mod -> MOD . mod_path ext_stmts                (rule 2)

	ID_CAP_USCORE  shift, and enter state 8

	modid          goto state 5
	mod_path       goto state 6
	dotted_modid   goto state 7

State 4

	%start_parseHk -> trans_unit .                      (rule 0)

	%eof           accept


State 5

	dotted_modid -> modid .                             (rule 5)

	MOD            reduce using rule 5
	USE            reduce using rule 5
	USE_QUAL       reduce using rule 5
	PUB            reduce using rule 5
	PRIV           reduce using rule 5
	LINK           reduce using rule 5
	DATA           reduce using rule 5
	ENUM           reduce using rule 5
	TYPE           reduce using rule 5
	CLASS          reduce using rule 5
	INST           reduce using rule 5
	FN             reduce using rule 5
	VAL            reduce using rule 5
	VAR            reduce using rule 5
	':'            reduce using rule 5
	'.'            reduce using rule 5


State 6

	root_mod -> MOD mod_path . ext_stmts                (rule 2)

	MOD            shift, and enter state 17
	USE            shift, and enter state 18
	USE_QUAL       shift, and enter state 19
	PUB            shift, and enter state 20
	PRIV           shift, and enter state 21
	LINK           reduce using rule 34
	DATA           reduce using rule 34
	ENUM           reduce using rule 34
	TYPE           reduce using rule 34
	CLASS          reduce using rule 34
	INST           reduce using rule 34
	FN             reduce using rule 34
	VAL            reduce using rule 34
	VAR            reduce using rule 34

	ext_stmts      goto state 10
	ext_stmt       goto state 11
	vis_tag        goto state 12
	vis_tag0       goto state 13
	ext_fn_stmt    goto state 14
	mod_dec        goto state 15
	import_dec     goto state 16

State 7

	mod_path -> dotted_modid .                          (rule 4)
	dotted_modid -> dotted_modid . '.' modid            (rule 6)

	MOD            reduce using rule 4
	USE            reduce using rule 4
	USE_QUAL       reduce using rule 4
	PUB            reduce using rule 4
	PRIV           reduce using rule 4
	LINK           reduce using rule 4
	DATA           reduce using rule 4
	ENUM           reduce using rule 4
	TYPE           reduce using rule 4
	CLASS          reduce using rule 4
	INST           reduce using rule 4
	FN             reduce using rule 4
	VAL            reduce using rule 4
	VAR            reduce using rule 4
	':'            reduce using rule 4
	'.'            shift, and enter state 9
			(reduce using rule 4)



State 8

	modid -> ID_CAP_USCORE .                            (rule 3)

	MOD            reduce using rule 3
	USE            reduce using rule 3
	USE_QUAL       reduce using rule 3
	PUB            reduce using rule 3
	PRIV           reduce using rule 3
	LINK           reduce using rule 3
	DATA           reduce using rule 3
	ENUM           reduce using rule 3
	TYPE           reduce using rule 3
	CLASS          reduce using rule 3
	INST           reduce using rule 3
	FN             reduce using rule 3
	VAL            reduce using rule 3
	VAR            reduce using rule 3
	':'            reduce using rule 3
	')'            reduce using rule 3
	'}'            reduce using rule 3
	'.'            reduce using rule 3
	','            reduce using rule 3
	%eof           reduce using rule 3


State 9

	dotted_modid -> dotted_modid '.' . modid            (rule 6)

	ID_CAP_USCORE  shift, and enter state 8

	modid          goto state 57

State 10

	root_mod -> MOD mod_path ext_stmts .                (rule 2)
	ext_stmts -> ext_stmts . ext_stmt                   (rule 27)

	MOD            shift, and enter state 17
	USE            shift, and enter state 18
	USE_QUAL       shift, and enter state 19
	PUB            shift, and enter state 20
	PRIV           shift, and enter state 21
	LINK           reduce using rule 34
	DATA           reduce using rule 34
	ENUM           reduce using rule 34
	TYPE           reduce using rule 34
	CLASS          reduce using rule 34
	INST           reduce using rule 34
	FN             reduce using rule 34
	VAL            reduce using rule 34
	VAR            reduce using rule 34
	%eof           reduce using rule 2

	ext_stmt       goto state 56
	vis_tag        goto state 12
	vis_tag0       goto state 13
	ext_fn_stmt    goto state 14
	mod_dec        goto state 15
	import_dec     goto state 16

State 11

	ext_stmts -> ext_stmt .                             (rule 26)

	MOD            reduce using rule 26
	USE            reduce using rule 26
	USE_QUAL       reduce using rule 26
	PUB            reduce using rule 26
	PRIV           reduce using rule 26
	LINK           reduce using rule 26
	DATA           reduce using rule 26
	ENUM           reduce using rule 26
	TYPE           reduce using rule 26
	CLASS          reduce using rule 26
	INST           reduce using rule 26
	FN             reduce using rule 26
	VAL            reduce using rule 26
	VAR            reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 12

	vis_tag0 -> vis_tag .                               (rule 33)
	mod_dec -> vis_tag . MOD mod_path ':' ext_block     (rule 43)
	import_dec -> vis_tag . USE import_path             (rule 46)
	import_dec -> vis_tag . USE_QUAL import_path        (rule 47)

	MOD            shift, and enter state 53
	USE            shift, and enter state 54
	USE_QUAL       shift, and enter state 55
	LINK           reduce using rule 33
	DATA           reduce using rule 33
	ENUM           reduce using rule 33
	TYPE           reduce using rule 33
	CLASS          reduce using rule 33
	INST           reduce using rule 33
	FN             reduce using rule 33
	VAL            reduce using rule 33
	VAR            reduce using rule 33


State 13

	ext_fn_stmt -> vis_tag0 . LINK fn_dec               (rule 35)
	ext_fn_stmt -> vis_tag0 . fn_dec                    (rule 36)
	ext_fn_stmt -> vis_tag0 . fn_def                    (rule 37)
	ext_fn_stmt -> vis_tag0 . val_def                   (rule 38)
	ext_fn_stmt -> vis_tag0 . var_dec                   (rule 39)
	ext_fn_stmt -> vis_tag0 . var_def                   (rule 40)
	ext_fn_stmt -> vis_tag0 . type_def                  (rule 41)

	LINK           shift, and enter state 44
	DATA           shift, and enter state 45
	ENUM           shift, and enter state 46
	TYPE           shift, and enter state 47
	CLASS          shift, and enter state 48
	INST           shift, and enter state 49
	FN             shift, and enter state 50
	VAL            shift, and enter state 51
	VAR            shift, and enter state 52

	fn_dec         goto state 33
	fn_def         goto state 34
	val_def        goto state 35
	var_dec        goto state 36
	var_def        goto state 37
	type_def       goto state 38
	alias_def      goto state 39
	rec_def        goto state 40
	union_def      goto state 41
	class_def      goto state 42
	inst_def       goto state 43

State 14

	ext_stmt -> ext_fn_stmt .                           (rule 30)

	MOD            reduce using rule 30
	USE            reduce using rule 30
	USE_QUAL       reduce using rule 30
	PUB            reduce using rule 30
	PRIV           reduce using rule 30
	LINK           reduce using rule 30
	DATA           reduce using rule 30
	ENUM           reduce using rule 30
	TYPE           reduce using rule 30
	CLASS          reduce using rule 30
	INST           reduce using rule 30
	FN             reduce using rule 30
	VAL            reduce using rule 30
	VAR            reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 15

	ext_stmt -> mod_dec .                               (rule 28)

	MOD            reduce using rule 28
	USE            reduce using rule 28
	USE_QUAL       reduce using rule 28
	PUB            reduce using rule 28
	PRIV           reduce using rule 28
	LINK           reduce using rule 28
	DATA           reduce using rule 28
	ENUM           reduce using rule 28
	TYPE           reduce using rule 28
	CLASS          reduce using rule 28
	INST           reduce using rule 28
	FN             reduce using rule 28
	VAL            reduce using rule 28
	VAR            reduce using rule 28
	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 16

	ext_stmt -> import_dec .                            (rule 29)

	MOD            reduce using rule 29
	USE            reduce using rule 29
	USE_QUAL       reduce using rule 29
	PUB            reduce using rule 29
	PRIV           reduce using rule 29
	LINK           reduce using rule 29
	DATA           reduce using rule 29
	ENUM           reduce using rule 29
	TYPE           reduce using rule 29
	CLASS          reduce using rule 29
	INST           reduce using rule 29
	FN             reduce using rule 29
	VAL            reduce using rule 29
	VAR            reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 17

	mod_dec -> MOD . mod_path ':' ext_block             (rule 42)

	ID_CAP_USCORE  shift, and enter state 8

	modid          goto state 5
	mod_path       goto state 32
	dotted_modid   goto state 7

State 18

	import_dec -> USE . import_path                     (rule 44)

	'('            shift, and enter state 26
	ID_LOWER       shift, and enter state 27
	ID_CAP_USCORE  shift, and enter state 28
	ID_USCORE_NUM_TICKshift, and enter state 29
	ID_CAP_USCORE_NUM_TICKshift, and enter state 30

	modid          goto state 22
	import_target_idgoto state 23
	import_path    goto state 31
	import_target  goto state 25

State 19

	import_dec -> USE_QUAL . import_path                (rule 45)

	'('            shift, and enter state 26
	ID_LOWER       shift, and enter state 27
	ID_CAP_USCORE  shift, and enter state 28
	ID_USCORE_NUM_TICKshift, and enter state 29
	ID_CAP_USCORE_NUM_TICKshift, and enter state 30

	modid          goto state 22
	import_target_idgoto state 23
	import_path    goto state 24
	import_target  goto state 25

State 20

	vis_tag -> PUB .                                    (rule 31)

	MOD            reduce using rule 31
	USE            reduce using rule 31
	USE_QUAL       reduce using rule 31
	LINK           reduce using rule 31
	DATA           reduce using rule 31
	ENUM           reduce using rule 31
	TYPE           reduce using rule 31
	CLASS          reduce using rule 31
	INST           reduce using rule 31
	FN             reduce using rule 31
	VAL            reduce using rule 31
	VAR            reduce using rule 31


State 21

	vis_tag -> PRIV .                                   (rule 32)

	MOD            reduce using rule 32
	USE            reduce using rule 32
	USE_QUAL       reduce using rule 32
	LINK           reduce using rule 32
	DATA           reduce using rule 32
	ENUM           reduce using rule 32
	TYPE           reduce using rule 32
	CLASS          reduce using rule 32
	INST           reduce using rule 32
	FN             reduce using rule 32
	VAL            reduce using rule 32
	VAR            reduce using rule 32


State 22

	import_path -> modid . '.' import_path              (rule 48)

	'.'            shift, and enter state 93


State 23

	import_target -> import_target_id .                 (rule 50)

	MOD            reduce using rule 50
	USE            reduce using rule 50
	USE_QUAL       reduce using rule 50
	AS             reduce using rule 50
	PUB            reduce using rule 50
	PRIV           reduce using rule 50
	LINK           reduce using rule 50
	DATA           reduce using rule 50
	ENUM           reduce using rule 50
	TYPE           reduce using rule 50
	CLASS          reduce using rule 50
	INST           reduce using rule 50
	FN             reduce using rule 50
	VAL            reduce using rule 50
	VAR            reduce using rule 50
	')'            reduce using rule 50
	'}'            reduce using rule 50
	','            reduce using rule 50
	%eof           reduce using rule 50


State 24

	import_dec -> USE_QUAL import_path .                (rule 45)

	MOD            reduce using rule 45
	USE            reduce using rule 45
	USE_QUAL       reduce using rule 45
	PUB            reduce using rule 45
	PRIV           reduce using rule 45
	LINK           reduce using rule 45
	DATA           reduce using rule 45
	ENUM           reduce using rule 45
	TYPE           reduce using rule 45
	CLASS          reduce using rule 45
	INST           reduce using rule 45
	FN             reduce using rule 45
	VAL            reduce using rule 45
	VAR            reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 25

	import_path -> import_target . import_alias0        (rule 49)
